[package]
name = "game_cheat_practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = { version = "0.29.10"}
winapi = { version = "0.3.9", features = ["winuser","memoryapi","processthreadsapi","handleapi","errhandlingapi"]}
